--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1>User Data Management</h1>
         <div class="row">
             <div class="col-12">
-                <button class="btn btn-primary" onclick="openUserForm()" data-bs-toggle="modal"
+                <button class="btn btn-primary mt-4" onclick="openUserForm()" data-bs-toggle="modal"
                     data-bs-target="#userForm">New User <i class="fa-solid fa-user"></i>
                 </button>
             </div>
